# accomodation-analysis

./: .gitignore  README.md  about.html  accommodations_map.html  blog.html  feed.xml  index.html  map.html  new_post.sh  pyproject.toml  robots.txt  sitemap.xml
.github/workflows/: deploy-pages.yml
assets/css/: style.css
assets/map/: index.html
blog/2026/04/14/nlp-analysis-accommodation-reviews/: index.html
data/: accommodations.csv  accommodations_enriched.csv
data/processed/: accommodations_enriched.csv
data/raw/: accommodations.csv
docs/: .gitignore  Gemfile  README.md  _config.yml  deploy.sh  index.md
docs/_layouts/: default.html  post.html
docs/_pages/: about.md  blog.md  map.md
docs/_posts/: 2026-04-14-nlp-analysis-accommodation-reviews.md
docs/assets/js/: main.js
docs/assets/map/: index.html
notebooks/: get_data.ipynb
outputs/: accommodations_map.html  index.html
scripts/: enrich_accommodations.py
src/: constants.py  enrich_data.py  main.py  map_builder.py
